# splitstep-toe

./: # press Enter 3× to accept defaults  # press Enter 3× to accept defaults.pub  CITATION.cff  README.md  environment.yml  pyproject.toml  setup.py
.github/workflows/: ci.yml
code/: cosmo.py  darkmatter.py  fermion.py  gauge.py  higgs.py  measurement.py  persistence.py
code/demos/: demo_module0.py
notebooks/: 01_wave_speed.ipynb  02_light_bending.ipynb  05_fft_laplacian.ipynb
src/splitstep_toe/core/: __init__.py  engine.py  fft.py  laplacian.py
src/splitstep_toe/cosmo/: __init__.py  scale_factor.py
src/splitstep_toe/darkmatter/: __init__.py  leapfrog.py
src/splitstep_toe/ew_breaking/: __init__.py  higgs.py
src/splitstep_toe/gauge/: __init__.py  anomaly.py
src/splitstep_toe/geometry/: __init__.py  geodesic.py  metric.py
tests/: test_cosmo.py  test_darkmatter.py  test_fft.py  test_gauge.py  test_geodesic.py  test_geometry.py  test_higgs.py  test_higgs_vev.py  test_import.py  test_light_bend.py  test_wave_speed.py
tests/tests/: test_light_bend.py  test_wave_speed.py
