[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "splitstep-toe"
version = "0.0.1"
description = "Split-step Theory-of-Everything playground"
requires-python = ">=3.9"
license = { file = "LICENSE" }

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "splitstep-toe"
version = "0.0.1"
description = "Split-step Theory-of-Everything playground"
requires-python = ">=3.9"
license = { file = "LICENSE" }

# ↓↓↓ NEW BLOCK ↓↓↓
dependencies = [
    # numerical core
    "numpy>=1.23",
    "scipy>=1.10",
    "numba>=0.56",
]

[project.urls]
Homepage = "https://github.com/pofunder/splitstep-toe"

[tool.setuptools.packages.find]
include = ["splitstep_toe*"]

[project.optional-dependencies]
test = [
    "pytest",
    "ruff~=0.4",
    "black>=24",
    "pandas>=2.0"
]
dev = [
    "ipykernel",
    "jupyterlab"
]

[tool.black]
line-length = 88
skip-string-normalization = true

[tool.ruff]
line-length = 88
extend-select = ["I", "E", "F"]
